Update about me section,  improved styling for light and dark modes, minor fix to headshot

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -116,7 +116,7 @@ button:focus:not(:focus-visible) {
 
 @media (prefers-color-scheme: light) {
 	:root {
-		background-color: #fff;
+		background-color: #fafafa;
 		color: #22272e;
 	}
 }
